# cpp_simple_template

./: .gitignore  CMakeLists.txt  README.md  macro_utils.hpp  main.cpp
doc/: Doxyfile
matlab/: mex_.cpp
test/: test_demo.cpp
